--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     		
     	<tr>
     	  <th>name</th>
-    	  <td><%= current_user.name %></td>
+    	  <td><%= @user.name %></td>
       </tr>
            <tr>
     	  <th>introduction</th>
